force-app/main/default/objects/RetailStore/fields/Condicion_producto__c.field-meta.xml
<CustomField>
    <fullName>Condicion_producto__c</fullName>
    <label>Condición del producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cumplimiento de ventanas horarias</fullName>
            </value>
            <value>
                <fullName>Gramajes</fullName>
            </value>
            <value>
                <fullName>Temperatura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>