force-app/main/default/objects/RetailStore/fields/cu_condicion_entrega__c.field-meta.xml
<CustomField>
    <fullName>cu_condicion_entrega__c</fullName>
    <description>Condición de entrega acordada con el cliente.</description>
    <label>Condición de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Punto a Punto</fullName>
            </value>
            <value>
                <fullName>Cedi</fullName>
            </value>
            <value>
                <fullName>Operador logístico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>