force-app/main/default/objects/RetailStore/fields/cu_cupo__c.field-meta.xml
<CustomField>
    <fullName>cu_cupo__c</fullName>
    <description>Límite de crédito aprobado para el cliente</description>
    <label>Cupo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>