force-app/main/default/objects/RetailStore/fields/cu_devoluciones__c.field-meta.xml
<CustomField>
    <fullName>cu_devoluciones__c</fullName>
    <description>Motivos de devoluciones de productos.</description>
    <label>Devoluciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calidad</fullName>
            </value>
            <value>
                <fullName>diferencias de factura</fullName>
            </value>
            <value>
                <fullName>Vencimientos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>