force-app/main/default/objects/RetailStore/fields/cu_dias_de_atencion__c.field-meta.xml
<CustomField>
    <fullName>cu_dias_de_atencion__c</fullName>
    <label>Días de Atención</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunes</fullName>
            </value>
            <value>
                <fullName>Martes</fullName>
            </value>
            <value>
                <fullName>Miércoles</fullName>
            </value>
            <value>
                <fullName>Jueves</fullName>
            </value>
            <value>
                <fullName>Viernes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>