force-app/main/default/objects/RetailStore/fields/cu_equipo_de_ejecucion__c.field-meta.xml
<CustomField>
    <fullName>cu_equipo_de_ejecucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipo de Ejecución</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tiendas</relationshipName>
    <type>Lookup</type>
</CustomField>