force-app/main/default/objects/RetailStore/fields/cu_Es_Multimarca__c.field-meta.xml
<CustomField>
    <fullName>cu_Es_Multimarca__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si maneja varias marcas</description>
    <label>¿Es multimarca?</label>
    <type>Checkbox</type>
</CustomField>