force-app/main/default/objects/RetailStore/fields/cu_franja_horaria_agendada__c.field-meta.xml
<CustomField>
    <fullName>cu_franja_horaria_agendada__c</fullName>
    <label>Franja Horaria Agendada</label>
    <length>50</length>
    <type>Text</type>
</CustomField>