force-app/main/default/objects/RetailStore/fields/cu_hora_entrega_acordada__c.field-meta.xml
<CustomField>
    <fullName>cu_hora_entrega_acordada__c</fullName>
    <label>Hora de entrega acordada</label>
    <length>20</length>
    <type>Text</type>
</CustomField>