force-app/main/default/objects/RetailStore/fields/cu_hora_visita_acordada__c.field-meta.xml
<CustomField>
    <fullName>cu_hora_visita_acordada__c</fullName>
    <label>Hora de visita acordada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>