force-app/main/default/objects/RetailStore/fields/cu_Italcol_Portafolio_Productos__c.field-meta.xml
<CustomField>
    <fullName>cu_Italcol_Portafolio_Productos__c</fullName>
    <label>Portafolio productos y materias primas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postura</fullName>
            </value>
            <value>
                <fullName>Pollo</fullName>
            </value>
            <value>
                <fullName>Porcicultura</fullName>
            </value>
            <value>
                <fullName>Ganadería</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Equinos</fullName>
            </value>
            <value>
                <fullName>Acuacultura</fullName>
            </value>
            <value>
                <fullName>Producto Terminado</fullName>
            </value>
            <value>
                <fullName>Mascotas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>