force-app/main/default/objects/RetailStore/fields/cu_Lineas_Manejadas__c.field-meta.xml
<CustomField>
    <fullName>cu_Lineas_Manejadas__c</fullName>
    <description>Productos que comercializa</description>
    <label>Líneas que maneja</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postura</fullName>
            </value>
            <value>
                <fullName>Pollo</fullName>
            </value>
            <value>
                <fullName>Porcicultura</fullName>
            </value>
            <value>
                <fullName>Ganadería</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Equinos</fullName>
            </value>
            <value>
                <fullName>Acuacultura</fullName>
            </value>
            <value>
                <fullName>Producto Terminado</fullName>
            </value>
            <value>
                <fullName>Mascotas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>