force-app/main/default/objects/RetailStore/fields/cu_Marcas_Que_Maneja__c.field-meta.xml
<CustomField>
    <fullName>cu_Marcas_Que_Maneja__c</fullName>
    <label>Marcas que maneja</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finca</fullName>
            </value>
            <value>
                <fullName>Contegral</fullName>
            </value>
            <value>
                <fullName>Solla</fullName>
            </value>
            <value>
                <fullName>Raza</fullName>
            </value>
            <value>
                <fullName>Cipa</fullName>
            </value>
            <value>
                <fullName>Sonex</fullName>
            </value>
            <value>
                <fullName>Ganasal</fullName>
            </value>
            <value>
                <fullName>Nutryr</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>