force-app/main/default/objects/RetailStore/fields/cu_objetivo_visita__c.field-meta.xml
<CustomField>
    <fullName>cu_objetivo_visita__c</fullName>
    <label>Objetivo de la visita</label>
    <length>30</length>
    <type>Text</type>
</CustomField>