force-app/main/default/objects/RetailStore/fields/cu_Otros__c.field-meta.xml
<CustomField>
    <fullName>cu_Otros__c</fullName>
    <label>Otros</label>
    <length>100</length>
    <type>Text</type>
</CustomField>