force-app/main/default/objects/RetailStore/fields/cu_plazo__c.field-meta.xml
<CustomField>
    <fullName>cu_plazo__c</fullName>
    <description>Término de pago acordado con el cliente</description>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A 30 días</fullName>
            </value>
            <value>
                <fullName>A 60 días</fullName>
            </value>
            <value>
                <fullName>A 45 días</fullName>
            </value>
            <value>
                <fullName>A 8 días</fullName>
            </value>
            <value>
                <fullName>Inmediato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>