force-app/main/default/objects/RetailStore/fields/cu_Portafolio_Complementario__c.field-meta.xml
<CustomField>
    <fullName>cu_Portafolio_Complementario__c</fullName>
    <label>¿Qué portafolio complementario maneja?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicamentos Veterinarios</fullName>
            </value>
            <value>
                <fullName>Productos Agrícolas</fullName>
            </value>
            <value>
                <fullName>Maquinaria y Agroferretería</fullName>
            </value>
            <value>
                <fullName>Petshop</fullName>
            </value>
            <value>
                <fullName>Ropa y Dotaciones</fullName>
            </value>
            <value>
                <fullName>Animales Vivos,</fullName>
            </value>
            <value>
                <fullName>alabartería</fullName>
            </value>
            <value>
                <fullName>Materias primas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>