force-app/main/default/objects/RetailStore/fields/cu_Servicio_Logistico__c.field-meta.xml
<CustomField>
    <fullName>cu_Servicio_Logistico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene servicio logístico</label>
    <type>Checkbox</type>
</CustomField>