force-app/main/default/objects/RetailStore/fields/cu_Servicios_Complementarios__c.field-meta.xml
<CustomField>
    <fullName>cu_Servicios_Complementarios__c</fullName>
    <label>¿Qué servicios complementarios maneja?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estética de mascotas</fullName>
            </value>
            <value>
                <fullName>Servicio Veterinario Clínico</fullName>
            </value>
            <value>
                <fullName>Asistencia Técnica</fullName>
            </value>
            <value>
                <fullName>Guardería</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>