force-app/main/default/objects/RetailStore/fields/cu_subcanal__c.field-meta.xml
<CustomField>
    <fullName>cu_subcanal__c</fullName>
    <description>Subcategoría del canal de distribución</description>
    <label>Subcanal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supermercado Nacional</fullName>
            </value>
            <value>
                <fullName>Supermercado Regional</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Carry</fullName>
            </value>
            <value>
                <fullName>Hard Discount</fullName>
            </value>
            <value>
                <fullName>Geográfico Directo</fullName>
            </value>
            <value>
                <fullName>Asaderos de Barrio</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Hoteles</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Casinos</fullName>
            </value>
            <value>
                <fullName>Restaurantes</fullName>
            </value>
            <value>
                <fullName>Distribuidor Food Service</fullName>
            </value>
            <value>
                <fullName>Asaderos Cadena</fullName>
            </value>
            <value>
                <fullName>Domicilio</fullName>
            </value>
            <value>
                <fullName>Mostrador</fullName>
            </value>
            <value>
                <fullName>Empleados</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Directa</fullName>
            </value>
            <value>
                <fullName>Transformadores</fullName>
            </value>
            <value>
                <fullName>Intercompañía</fullName>
            </value>
            <value>
                <fullName>Producto No Conforme</fullName>
            </value>
            <value>
                <fullName>Fundaciones</fullName>
            </value>
            <value>
                <fullName>Producción</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>