force-app/main/default/objects/RetailStore/fields/cu_tipo_frecuencia_entrega__c.field-meta.xml
<CustomField>
    <fullName>cu_tipo_frecuencia_entrega__c</fullName>
    <label>Tipo de frecuencia de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diariamente</fullName>
            </value>
            <value>
                <fullName>Semanalmente</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Programación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>