force-app/main/default/objects/RetailStore/fields/cu_tipologia_tienda__c.field-meta.xml
<CustomField>
    <fullName>cu_tipologia_tienda__c</fullName>
    <description>Tipología de las tiendas</description>
    <label>Tipología</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cu_subcanal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>cu_tipologia_establecimiento</valueSetName>
    </valueSet>
</CustomField>