force-app/main/default/objects/RetailStore/fields/cu_Transporte__c.field-meta.xml
<CustomField>
    <fullName>cu_Transporte__c</fullName>
    <label>Transporte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canal Propio</fullName>
            </value>
            <value>
                <fullName>Tercerizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>