force-app/main/default/objects/RetailStore/fields/cu_Venta_Externa__c.field-meta.xml
<CustomField>
    <fullName>cu_Venta_Externa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene servicio de venta externa</label>
    <type>Checkbox</type>
</CustomField>