force-app/main/default/objects/RetailStore/fields/Detalle_Direccion_entrega__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Direccion_entrega__c</fullName>
    <label>Detalle Dirección de entrega</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>