force-app/main/default/objects/RetailStore/fields/ti_email__c.field-meta.xml
<CustomField>
    <fullName>ti_email__c</fullName>
    <label>Correo Eléctronico</label>
    <type>Email</type>
</CustomField>