force-app/main/default/objects/RetailStore/fields/ti_Phone__c.field-meta.xml
<CustomField>
    <fullName>ti_Phone__c</fullName>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>