force-app/main/default/objects/RetailStore/fields/Tiene_CEPI__c.field-meta.xml
<CustomField>
    <fullName>Tiene_CEPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene CEPI</label>
    <type>Checkbox</type>
</CustomField>